# repoindex-analyzer-c

./: README.md  pyproject.toml
src/repoindex_analyzer_c/: __init__.py
tests/: test_c_package.py
