[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoindex-analyzer-c"
version = "0.1.0"
description = "First-party C-family analyzer plugin for repoindex"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "repoindex",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
]

[project.entry-points."repoindex.analyzers"]
c = "repoindex_analyzer_c:build_analyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
